2007-07-18  Till Kamppeter <till.kamppeter@gmail.com>

	* README, foomatic-perl-data.c, lib/Foomatic/DB.pm: Added support
	  for suppressing page accounting on a per-driver basis. If a
	  driver XML file is marked with "<nopageaccounting/>" in its
	  "<execution>" section, the line "*FoomaticNoPageAccounting:
	  True" is added to the PPD file to let foomatic-rip suppress
	  inserting the page accounting code into the PostScript data
	  stream.

2007-07-11  Till Kamppeter <till.kamppeter@gmail.com>

	* Makefile.in, README, README.build-foomatic-filters-ppds, USAGE,
	  configure.ac, foomatic-preferred-driver.in,
	  foomatic-printermap-to-gimp-print-xml.in,
	  foomatic-printermap-to-gutenprint-xml.in, debian/presubj,
	  lib/Foomatic/DB.pm: Replaced "Gimp-Print" by "Gutenprint".

2007-07-10  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Allow group names preceeded by asterisks
	  ('*') in PPD files ("*OpenGroup: ..."/"*CloseGroup: ..." lines).
	  This is needed by the PPD for the KONICA MINOLTA magicolor 5430
	  DL, provided by KONICA MINOLTA and probably also by several
	  other manufacturer-supplied PPD files.

2007-03-08  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Let the PPD files listed in the XML version
	  of the overview also get listed in the Perl version.

2007-03-04  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Improved find_printer() method. Now
	  searches of make and model names do not consider other characters
	  than letters and numbers any more. All other characters are and
	  boundaries between letters and numbers are converted to single
	  spaces.

2007-03-03  Till Kamppeter <till.kamppeter@gmail.com>

	* debian/control: "gimp-print" -> "gutenprint".

2007-02-28  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added new find_printer() method, to find
	  printer entries in the database based on IEEE-1284 device IDs